[project]
name = "coinalyze-pandas"
version = "0.1.0"
description = "Pandas Client to Coinalyze REST API"
authors = [
    {name = "lucas.jamar@spqhi.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=6.2.2,<7.0.0)"
]

[tool.poetry]
include = ["coinalyze_pandas/*"]
exclude = ["tests/*", ".env"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
